--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  @font-face {
+    font-family: 'GowunBatang';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(/font/GowunBatang-Regular.ttf) format('truetype');
+  }
+  @font-face {
+    font-family: 'GowunBatang';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url(/font/GowunBatang-Bold.ttf) format('truetype');
+  }
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -17,5 +34,5 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  /*font-family: Arial, Helvetica, sans-serif;*/
 }
