--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,7 +28,7 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  /*--foreground: #171717;*/
 }
 
 /*@media (prefers-color-scheme: dark) {
@@ -39,7 +39,7 @@
 }*/
 
 body {
-  color: var(--foreground);
+  /*color: var(--foreground);*/
   background: var(--background);
   /*font-family: Arial, Helvetica, sans-serif;*/
 }
